--- a/WPFConverter/App.xaml
+++ b/WPFConverter/App.xaml
@@ -4,6 +4,28 @@
              xmlns:local="clr-namespace:WPFConverter"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <!-- create a template for buttons, this template adds the round effect to a button-->
+        <Style x:Key="ButtonRound" TargetType="Button">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <!-- template binding targets the background of the button-->
+                        <Border CornerRadius="5" Background="{TemplateBinding Background}" BorderThickness="0.5">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <!--<Setter Property="Background">
+                <>
+                    <ControlTemplate TargetType="Button">
+                        <LinearGradientBrush StartPoint="0,0" EndPoint="1,0">
+                            <GradientStop Color="Aqua" Offset="0.0"/>
+                            <GradientStop Color="Aquamarine" Offset="0.50"/>
+                        </LinearGradientBrush>
+                    </ControlTemplate>
+                </>
+            </Setter>-->
+        </Style>
     </Application.Resources>
 </Application>
