--- a/WPFConverter/MainWindow.xaml
+++ b/WPFConverter/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:WPFConverter"
         xmlns:fa="http://schemas.fontawesome.io/icons/"
         mc:Ignorable="d"
-        Title="Currency Converter" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen">
+        Title="Currency Converter" SizeToContent="WidthAndHeight" MinHeight="400" MinWidth="850" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="60"/>
@@ -28,8 +28,8 @@
         <StackPanel Grid.Row="1" Orientation="Vertical" HorizontalAlignment="Center"
                     Height="80" Width="1000">
             <Label Height="40" Width="1000" HorizontalContentAlignment="Center"
-                   VerticalContentAlignment="Center" Content="Convert Currency" FontSize="20"/>
-            <!-- this label will receive the information of the currency convertion-->
+                   VerticalContentAlignment="Center" Content="Converted Currency" FontSize="20"/>
+            <!-- this label will receive the information of the currency conversion-->
             <Label Name="LblCurrency" Height="40" Width="1000" HorizontalContentAlignment="Center"
                    VerticalContentAlignment="Center" FontSize="20"/>
         </StackPanel>
@@ -65,7 +65,7 @@
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center"
                     VerticalAlignment="Bottom" Height="90" Width="800">
             <TextBox x:Name="TxtCurrency" Width="200" Height="30" Margin="40, 0,0,0"
-                     PreviewTextInput="NumberValidationTextBox" FontSize="18"
+                     PreviewTextInput="NumberValidationTextBox" MaxLength="10" FontSize="18"
                      VerticalContentAlignment="Center" VerticalAlignment="Top"/>
             <ComboBox Name="CmbFromCurrency" Width="170" Height="30" Margin="60,0,40,0"
                       FontSize="18" VerticalContentAlignment="Center" VerticalAlignment="Top"
