--- a/WPFConverter/MainWindow.xaml
+++ b/WPFConverter/MainWindow.xaml
@@ -12,10 +12,6 @@
     <TabControl x:Name="TbMain" TabStripPlacement="Top" SelectionChanged="TbMain_SelectionChanged">
         <TabItem Name="TbConverter" Header="Currency Converter">
             <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition Width="6*"/>
-                </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="60"/>
                     <RowDefinition Height="80"/>
@@ -147,10 +143,10 @@
                 </StackPanel>
                 <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" 
                             Height="60" Width="800" VerticalAlignment="Bottom" Margin="100,0">
-                    <TextBox Name="txtAmount" Width="200" Height="30" Margin="180 0 0 0" 
+                    <TextBox Name="TxtAmount" Width="200" Height="30" Margin="180 0 0 0" 
                              PreviewTextInput="NumberValidationTextBox" MaxLength="10" 
                              FontSize="18" VerticalContentAlignment="Center" VerticalAlignment="Top"/>
-                    <TextBox Name="txtCurrencyName" Width="200" Height="30" 
+                    <TextBox Name="TxtCurrencyName" Width="200" Height="30" 
                              Margin="40, 0, 0, 0" FontSize="18" VerticalContentAlignment="Center" 
                              VerticalAlignment="Top" MaxLength="50" CharacterCasing="Upper"/>
                 </StackPanel>
@@ -164,7 +160,7 @@
                     </Button>
                 </StackPanel>
                 <StackPanel Height="200" Width="800" Grid.Row="3" Margin="150,0" VerticalAlignment="Top">
-                    <DataGrid Name="dgvCurrency" AutoGenerateColumns="False" Height="180" Margin="10" Width="480" Background="Transparent" CanUserAddRows="False" SelectedCellsChanged="dgvCurrency_SelectedCellsChanged" SelectionUnit="Cell" VerticalScrollBarVisibility="Auto">
+                    <DataGrid Name="DgvCurrency" AutoGenerateColumns="False" Height="180" Margin="10" Width="480" Background="Transparent" CanUserAddRows="False" SelectedCellsChanged="DgvCurrency_SelectedCellsChanged" SelectionUnit="Cell" VerticalScrollBarVisibility="Auto">
                         <DataGrid.Columns>
                             <DataGridTextColumn x:Name="Id" Header="Id" Width="100" CanUserResize="False" Visibility="Hidden" Binding="{Binding Path=Id}"/>
                             <DataGridTemplateColumn Header="" Width="70" IsReadOnly="True" DisplayIndex="0">
